microc/tests/expected/err-notlocal.uc.out
../examples/err-notlocal.uc:[8:5]: semantic error: identifier 'n' not declared
      n=10; // error: identifier not declared
      ^

1
